# eth-p2p-z

./: .dockerignore  .gitignore  .gitmodules  .testgroundignore  CONTRIBUTING.md  README.md  build.zig  build.zig.zon  test_cert.pem
.github/workflows/: check.yml  gossipsub-shadow.yml  interop-gossipsub.yml
docs/: quiche-refactor-plan.md
docs/benchmarks/: 2026-06-10-p0-baseline.md
docs/plans/: 2026-03-14-zig-master-rewrite-design.md  2026-03-14-zig-master-rewrite.md  2026-03-15-quic-tests-design.md  2026-03-15-quic-tests.md  2026-03-16-handler-instances-design.md  2026-03-17-connection-close-notification-design.md  2026-03-17-switch-as-swarm-design.md  2026-03-18-interop-testing-design.md  2026-03-18-interop-testing.md
docs/reviews/: 2026-06-10-actor-model-review.md
interop/gossipsub/: instruction.zig  lib.sh  main.zig  run-anonymous-mixed.sh  run-churn.sh  run-gossip-large.sh  run-mixed-mesh.sh  run-px-crossimpl.sh  run-version-fallback.sh  run-zig-go.sh  run-zig-rust.sh  run-zig-zig.sh  (+1 more)
interop/gossipsub/rust-peer/: .gitignore  Cargo.toml
interop/gossipsub/rust-peer/src/: main.rs
src/: bench_gossipsub.zig  bench_quic.zig  byte_buffer.zig  conn.zig  conn1.zig  consensus.zig  cpu_count.zig  event.zig  gremlin.zig  identity.zig  linear_fifo.zig  main.zig  misc.zig  multiaddr.zig  peer.zig  peer_id.zig  peer_record.zig  proto_handler.zig  protobuf.zig  protocols.zig  quic.zig  ref_count.zig  root.zig  secp_context.zig  security.zig  ssz.zig  state.zig  std_options.zig  switch.zig  thread_event_loop.zig  transport.zig  xev_backend.zig  zio_integration_tests.zig
(+186 files in other folders)
