[package]
name = "gspeer"
version = "0.1.0"
edition = "2021"
publish = false

# A minimal rust-libp2p gossipsub peer for cross-implementation interop smoke
# testing against the zig node. Pinned to the versions present in the local
# cargo registry cache so it builds offline (`cargo build --offline`).
[dependencies]
libp2p = { version = "0.56", features = ["gossipsub", "quic", "identify", "ed25519", "tokio", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "fs"] }
futures = "0.3"
# Content-addressed message-id for the anonymous scenario: sha256(topic||data),
# matching the zig and go peers. Already in the lock as a libp2p transitive dep,
# so it resolves offline.
sha2 = "0.10"

[[bin]]
name = "gspeer"
path = "src/main.rs"
